--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -60,4 +60,14 @@
       margin: 0 auto;
     }
   }
+
+  .main-footer__developed {
+    margin-bottom: 34.9px;
+    margin-right: 27px;
+  }
+
+  .main-footer__text {
+    margin-bottom: 35.5px;
+    margin-left: 26px;
+  }
 }
