--- a/source/sass/blocks/page-image.scss
+++ b/source/sass/blocks/page-image.scss
@@ -56,6 +56,8 @@
     @media (min-width: $desktop-width) {
       width: 459.5px;
       height: 349.97px;
+      top: 48.9%;
+      right: 50%;
     }
   }
 
