--- a/source/sass/blocks/social-icon.scss
+++ b/source/sass/blocks/social-icon.scss
@@ -8,6 +8,10 @@
   @media (min-width: $tablet-width) {
     margin-right: 6px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 6px;
+  }
 }
 
 .social-icon__link {
