--- a/source/sass/blocks/sub-header.scss
+++ b/source/sass/blocks/sub-header.scss
@@ -29,6 +29,10 @@
       @media (min-width: $tablet-width) {
         margin-left: 1px;
       }
+
+      @media (min-width: $desktop-width) {
+        margin-left: 3px;
+      }
     }
   }
 
@@ -56,8 +60,12 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 47px;
+    padding-top: 39px;
     padding-bottom: 56px;
+
+    &--first {
+      padding-top: 46px;
+    }
 
     .sub-header__wrapper {
       text-align: center;
